--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorAccent">
+    android:layout_height="match_parent">
     <!--<android.support.design.widget.FloatingActionButton-->
         <!--android:id="@+id/toTopBar"-->
         <!--android:layout_width="wrap_content"-->
@@ -14,5 +13,19 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/textrecycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</android.support.design.widget.CoordinatorLayout>
+        android:layout_height="match_parent"
+        android:background="#dedede"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/jump_First"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_margin="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:borderWidth="0dp"
+        android:elevation="20dp"
+        android:src="@drawable/tofirst"
+        android:backgroundTint="#ffffff"
+        android:visibility="gone"/>
+</RelativeLayout>
