--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -1,6 +1,210 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginBottom="1dp"
+    android:background="@color/white">
 
-</android.support.constraint.ConstraintLayout>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/video_icon"
+        android:layout_margin="10dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:src="@drawable/head"/>
+
+    <TextView
+        android:id="@+id/video_user"
+        android:layout_toRightOf="@id/video_icon"
+        android:layout_marginTop="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="llala"
+        android:textColor="@color/teal"
+        android:textSize="14sp"/>
+
+    <TextView
+        android:id="@+id/video_createtime"
+        android:layout_toRightOf="@id/video_icon"
+        android:layout_below="@id/video_user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="2018"
+        android:textSize="10sp"/>
+
+    <TextView
+        android:id="@+id/video_content"
+        android:layout_below="@id/video_icon"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="喔喔喔"
+        android:textColor="#000000"
+        android:textSize="17sp"/>
+
+    <ImageView
+        android:id="@+id/video_content_img"
+        android:layout_below="@id/video_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxHeight="360dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/head"
+        android:visibility="visible"/>
+
+    <VideoView
+        android:id="@+id/video_view"
+        android:layout_below="@id/video_content"
+        android:layout_above="@id/video_comment_layout"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
+
+
+    <RelativeLayout
+        android:layout_above="@id/video_comment_layout"
+        android:layout_width="match_parent"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_height="wrap_content">
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/video_play"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="16dp"
+            android:elevation="10dp"
+            app:borderWidth="0dp"
+            android:backgroundTint="#a0000000"
+            android:src="@drawable/play"/>
+        <SeekBar
+            android:id="@+id/video_seekbar"
+            android:layout_toRightOf="@id/video_play"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/video_this_time"
+            android:layout_marginBottom="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:textColor="@color/white"
+            android:layout_toRightOf="@id/video_play"
+            android:layout_below="@id/video_seekbar"
+            android:layout_marginRight="8dp"
+            android:text="00:00"/>
+        <TextView
+            android:id="@+id/video_total_time"
+            android:layout_marginBottom="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/video_seekbar"
+            android:layout_marginRight="8dp"
+            android:text="00:00"/>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/video_comment_layout"
+        android:layout_below="@id/video_content_img"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
+        android:orientation="horizontal">
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/video_like"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/like"/>
+                <TextView
+                    android:id="@+id/video_like_num"
+                    android:layout_toRightOf="@id/video_like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="bottom"
+                    android:layout_marginLeft="5dp"
+                    android:text="123"
+                    android:textSize="14sp"/>
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/video_unlike"
+                    android:layout_width="17dp"
+                    android:layout_height="17dp"
+                    android:src="@drawable/unlike"/>
+                <TextView
+                    android:id="@+id/video_unlike_num"
+                    android:layout_toRightOf="@id/video_unlike"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="bottom"
+                    android:layout_marginLeft="5dp"
+                    android:text="123"
+                    android:textSize="14sp"/>
+            </RelativeLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:layout_centerHorizontal="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/video_comment"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/comment"/>
+                <TextView
+                    android:id="@+id/video_comment_num"
+                    android:layout_toRightOf="@id/video_comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="bottom"
+                    android:layout_marginLeft="5dp"
+                    android:text="123"
+                    android:textSize="14sp"/>
+            </RelativeLayout>
+        </RelativeLayout>
+
+    </LinearLayout>
+</RelativeLayout>
