展示功能实现

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -6,4 +6,10 @@
         <attr name="show_text" format="string" />
 
     </declare-styleable>
+    <declare-styleable name="item_view_two">
+        <attr name="show_bottomline_two" format="boolean" />
+        <attr name="show_leftimg_two" format="integer" />
+        <attr name="show_text_two" format="string" />
+        <attr name="show_value" format="string"/>
+    </declare-styleable>
 </resources>
