--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="teal">#00796B</color>
+    <color name="play">#ffffff</color>
     <color name="brown">#8D6E63</color>
     <color name="blue">#2196F3</color>
     <color name="grey">#607D8B</color>
