--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -16,9 +16,9 @@
             android:layout_height="200dp" />
 
         <ImageView
-            android:id="@+id/iv_avatar"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:id="@+id/user_icon"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_centerInParent="true" />
         <RelativeLayout
             android:layout_width="match_parent"
@@ -27,59 +27,53 @@
             android:orientation="horizontal"
             android:layout_marginBottom="20dp">
 
-            <ImageView
-                android:id="@+id/user_line"
-                android:layout_width="1dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="15dp"
-                android:layout_centerHorizontal="true"
-                android:background="@color/white"/>
-
             <TextView
                 android:id="@+id/user_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toLeftOf="@id/user_line"
-                android:textSize="17sp"
-                android:textColor="@color/white"
-                android:text="张三"/>
-
-            <TextView
-                android:id="@+id/user_val"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
-                android:textSize="17sp"
+                android:textSize="18sp"
                 android:textColor="@color/white"
-                android:layout_toRightOf="@id/user_line"
-                android:text="182****5882"/>
+                android:layout_centerHorizontal="true"
+                android:text="u827578205"/>
         </RelativeLayout>
 
     </RelativeLayout>
 
-    <com.sdm.interestingreading.view.item_view
+    <com.sdm.interestingreading.view.item_view_two
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        zsg:show_bottomline="true"
-        zsg:show_leftimg="@drawable/shoucang"
-        zsg:show_text="我的收藏" />
+        zsg:show_bottomline_two="true"
+        zsg:show_leftimg_two="@drawable/nickname"
+        zsg:show_text_two="昵称"
+        zsg:show_value="小叮当"/>
 
-    <com.sdm.interestingreading.view.item_view
+    <com.sdm.interestingreading.view.item_view_two
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
-        zsg:show_bottomline="true"
-        zsg:show_leftimg="@drawable/lishi"
-        zsg:show_text="历史记录" />
+        zsg:show_bottomline_two="true"
+        zsg:show_leftimg_two="@drawable/create_time"
+        zsg:show_text_two="创建时间"
+        zsg:show_value="2018-5-19"/>
+
+    <com.sdm.interestingreading.view.item_view_two
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        zsg:show_bottomline_two="true"
+        zsg:show_leftimg_two="@drawable/email"
+        zsg:show_text_two="邮箱"
+        zsg:show_value="827578205@qq.com"/>
 
     <com.sdm.interestingreading.view.item_view
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
         zsg:show_bottomline="false"
-        zsg:show_leftimg="@drawable/xiazai"
-        zsg:show_text="离线缓存" />
+        zsg:show_leftimg="@drawable/lishi"
+        zsg:show_text="发布记录" />
 
     <com.sdm.interestingreading.view.item_view
         android:layout_width="match_parent"
@@ -97,4 +91,5 @@
         zsg:show_bottomline="false"
         zsg:show_leftimg="@drawable/about"
         zsg:show_text="关于" />
+
 </LinearLayout>
