--- a/app/src/main/res/layout/item_audio.xml
+++ b/app/src/main/res/layout/item_audio.xml
@@ -64,15 +64,12 @@
             android:layout_marginRight="16dp"
             android:layout_marginLeft="16dp"
             android:layout_height="wrap_content">
-            <android.support.design.widget.FloatingActionButton
+            <ImageView
                 android:id="@+id/audio_play"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_width="48dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginBottom="16dp"
-                android:elevation="10dp"
-                app:borderWidth="0dp"
-                android:backgroundTint="#a0000000"
                 android:src="@drawable/play"/>
             <SeekBar
                 android:id="@+id/audio_seekbar"
