--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -41,6 +41,7 @@
     </RelativeLayout>
 
     <com.sdm.interestingreading.view.item_view_two
+        android:id="@+id/user_nickname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -50,6 +51,7 @@
         zsg:show_value="小叮当"/>
 
     <com.sdm.interestingreading.view.item_view_two
+        android:id="@+id/user_create_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
@@ -59,6 +61,7 @@
         zsg:show_value="2018-5-19"/>
 
     <com.sdm.interestingreading.view.item_view_two
+        android:id="@+id/user_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
